# rdm

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  install.sh
.claude/skills/rdm-document/: SKILL.md
.claude/skills/rdm-implement/: SKILL.md
.claude/skills/rdm-review/: SKILL.md
.claude/skills/rdm-roadmap/: SKILL.md
.claude/skills/rdm-tasks/: SKILL.md
.config/: nextest.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: attach-install-sh.yml  ci.yml  install-test.yml  prepare-release.yml  release.yml  sign-release.yml
docs/: architecture.md  bootstrap-init.md  claude-code-web.md  expand-tag-support.md  file-formats.md  principles.md  rest-api.md
rdm-cli/: Cargo.toml
rdm-cli/src/: main.rs  paths.rs  table.rs
rdm-cli/src/commands/: bootstrap.rs  config.rs  hook.rs  mod.rs  phase.rs  project.rs  remote.rs  roadmap.rs  task.rs
rdm-cli/tests/: cli_agent_config.rs  cli_agent_workflow.rs  cli_bootstrap.rs  cli_config.rs  cli_describe.rs  cli_format.rs  cli_hook.rs  cli_index.rs  cli_init.rs  cli_list.rs  cli_phase.rs  cli_project.rs  cli_project_resolution.rs  cli_remote.rs  cli_roadmap.rs  cli_search.rs  cli_serve.rs  cli_staging.rs  cli_task.rs  cli_tree.rs  cli_xdg.rs
rdm-core/: Cargo.toml
rdm-core/src/: agent_config.rs  ast.rs  config.rs  conflict.rs  describe.rs  display.rs  document.rs  error.rs  hal.rs  hook.rs  io.rs  json.rs  lib.rs  markdown.rs  model.rs  paths.rs  problem.rs  repo.rs  search.rs  tree.rs
rdm-core/src/display/: format.rs  index.rs  mod.rs
rdm-core/src/ops/: index.rs  init.rs  mod.rs  phase.rs  project.rs  roadmap.rs  task.rs
rdm-core/src/repo/: index.rs  init.rs  mod.rs  paths.rs  phase.rs  roadmap.rs  task.rs  tests.rs
rdm-core/src/store/: fs.rs  memory.rs  mod.rs
rdm-core/src/templates/: instructions-cli.md  instructions-mcp.md  skill-document-cli.md  skill-document-mcp.md  skill-implement-cli.md  skill-implement-mcp.md  skill-review-cli.md  skill-review-mcp.md  skill-roadmap-cli.md  skill-roadmap-mcp.md  skill-tasks-cli.md  skill-tasks-mcp.md
rdm-core/tests/: ops.rs
rdm-mcp/: Cargo.toml
rdm-mcp/src/: lib.rs  server.rs
rdm-mcp/tests/: initialize_handshake.rs  integration.rs
rdm-server/: Cargo.toml
rdm-server/src/: content_type.rs  error.rs  extract.rs  lib.rs  main.rs  markdown.rs  router.rs  state.rs  templates.rs
rdm-server/src/handlers/: health.rs  mod.rs  phases.rs  projects.rs  roadmaps.rs  root.rs  search.rs  tasks.rs
rdm-server/templates/: _quick_filters.html  base.html  error.html  index.html  phase_detail.html  roadmap_detail.html  roadmaps.html  search_results.html  task_detail.html  task_list.html
rdm-server/tests/: a11y.rs  integration.rs
rdm-store-fs/: Cargo.toml
rdm-store-fs/src/: lib.rs
rdm-store-git/: Cargo.toml
rdm-store-git/src/: lib.rs
scripts/: install-claude-code-web-template.sh  verify-claude-code-web-loop.sh
templates/claude-code-web/: devcontainer.json.fragment
templates/claude-code-web/.claude/: settings.claude-code-web.json.example
templates/claude-code-web/.claude/hooks/: SessionStart.sh
