[workspace]
members = ["rdm-core", "rdm-cli", "rdm-server"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
toml = "0.8"
tempfile = "3"
is-terminal = "0.4"
nucleo-matcher = "0.3"
