[workspace]
members = ["rdm-core", "rdm-cli", "rdm-server", "rdm-store-fs", "rdm-store-git"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.94"
license = "GPL-3.0-or-later"
repository = "https://github.com/edpaget/rdm"
homepage = "https://github.com/edpaget/rdm"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
toml = "1.0"
serde_json = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
headers-accept = "0.3"
mediatype = "0.21"
tempfile = "3"
is-terminal = "0.4"
nucleo-matcher = "0.3"
askama = "0.15"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
