[package]
name = "rdm-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for managing project roadmaps, phases, and tasks"

[[bin]]
name = "rdm"
path = "src/main.rs"

[dependencies]
rdm-core = { path = "../rdm-core" }
clap = { workspace = true }
anyhow = { workspace = true }
is-terminal = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = { workspace = true }
