[package]
name = "rdm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for managing project roadmaps, phases, and tasks"

[[bin]]
name = "rdm"
path = "src/main.rs"

[dependencies]
rdm-core = { path = "../rdm-core" }
rdm-server = { path = "../rdm-server", optional = true }
clap = { workspace = true }
anyhow = { workspace = true }
is-terminal = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

[features]
default = ["server"]
server = ["dep:rdm-server", "dep:tokio", "dep:axum"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = { workspace = true }
