[package]
name = "rdm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for managing project roadmaps, phases, and tasks"

[[bin]]
name = "rdm"
path = "src/main.rs"

[dependencies]
rdm-core = { path = "../rdm-core" }
rdm-store-fs = { path = "../rdm-store-fs" }
rdm-store-git = { path = "../rdm-store-git", optional = true }
rdm-server = { path = "../rdm-server", optional = true }
rdm-mcp = { path = "../rdm-mcp", optional = true }
clap = { workspace = true }
anyhow = { workspace = true }
is-terminal = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
terminal_size = { workspace = true }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

[features]
default = ["server", "git", "mcp"]
git = ["dep:rdm-store-git", "rdm-mcp?/git"]
server = ["dep:rdm-server", "dep:tokio", "dep:axum"]
mcp = ["dep:rdm-mcp", "dep:tokio"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = { workspace = true }
gix = { version = "0.83", default-features = false, features = ["basic"] }
