[package]
name = "rdm-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for rdm: data model, parsing, file I/O, and index generation"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
