[package]
name = "rdm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for rdm: data model, parsing, file I/O, and index generation"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
nucleo-matcher = { workspace = true }
serde_json = { workspace = true }
