[package]
name = "rdm-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "MCP (Model Context Protocol) server for rdm"

[package.metadata.dist]
dist = false

[dependencies]
rdm-core = { path = "../rdm-core" }
rdm-store-fs = { path = "../rdm-store-fs" }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
