[package]
name = "rdm-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "REST API server for rdm"

[[bin]]
name = "rdm-server"
path = "src/main.rs"

[dependencies]
rdm-core = { path = "../rdm-core" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
headers-accept = { workspace = true }
mediatype = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tempfile = { workspace = true }
