[package]
name = "rdm-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API server for rdm"
publish = false

[package.metadata.dist]
dist = false

[[bin]]
name = "rdm-server"
path = "src/main.rs"

[dependencies]
rdm-core = { path = "../rdm-core" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
headers-accept = { workspace = true }
mediatype = { workspace = true }
askama = { workspace = true }
chrono = { workspace = true }
pulldown-cmark = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
