[package]
name = "rdm-store-fs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Filesystem-backed Store implementation for rdm with staging semantics"

[dependencies]
rdm-core = { path = "../rdm-core" }
tempfile = { workspace = true }

[dev-dependencies]
