[package]
name = "rdm-store-git"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Git-backed Store implementation for rdm with automatic commits via gitoxide"

[dependencies]
rdm-core = { path = "../rdm-core" }
rdm-store-fs = { path = "../rdm-store-fs" }
gix = { version = "0.81", default-features = false, features = ["basic", "index", "revision", "parallel"] }

[dev-dependencies]
tempfile = { workspace = true }
